kubernetes/apps/kguardian/kguardian/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
spec:
  hostnames:
    - kguardian.mrtb.io
  parentRefs:
    - name: gateway-internal
      namespace: network
  rules:
    - backendRefs:
        - name: kguardian-frontend
          namespace: kguardian
          port: 5173
